--- a/index.html
+++ b/index.html
@@ -518,7 +518,13 @@ You must replace <code>email & password </code> with your own credentials.
 </code></pre></div>
 <p>This endpoint retrieves curves based on Data Types, ISO&#39;s.</p>
 
-<p>Each data type can be formatted or unformatted, standardized or unstandardized and saved directly to a desired file format( csv,xlsx,json)</p>
+<p>
+  Each data type can be formatted or unformatted, standardized or unstandardized, and saved directly to a desired file format (csv, xlsx, json).
+</p>
+<img src="images/dataupload.png" alt="Data Upload Schedule" style="max-width: 100%; display: block; margin: 20px auto;">
+<p style="text-align: center;">
+  <em>Figure: Schedule for uploading data by curve type and ISO.</em>
+</p>
 <h3 id='http-request-2'>HTTP Request</h3>
 <p><code>GET https://truepriceenergy.com/get_data</code></p>
 <h1 id='errors'>Errors</h1>
