--- a/index.html
+++ b/index.html
@@ -515,6 +515,9 @@ You must replace <code>email & password </code> with your own credentials.
 <p>This endpoint retrieves curves based on Data Types, ISO&#39;s.</p>
 
 <p>Each data type can be formatted or unformatted, standardized or unstandardized and saved directly to a desired file format( csv,xlsx,json)</p>
+<div style="position: relative; top: -600px; left: 60px;">
+  <img src="images/dataupload.png" alt="Data Upload Schedule" style="width: 40%; height: auto;">
+</div>
 <h3 id='http-request-2'>HTTP Request</h3>
 <p><code>GET https://truepriceenergy.com/get_data</code></p>
 <h1 id='errors'>Errors</h1>
